--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/GlobalSchemaEntryEditor.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/GlobalSchemaEntryEditor.form
@@ -3,7 +3,7 @@
   <grid id="2fd0b" binding="mainPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="10" bottom="0" right="10"/>
     <constraints>
-      <xy x="39" y="23" width="639" height="615"/>
+      <xy x="39" y="23" width="639" height="643"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -16,7 +16,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="a60b3" class="javax.swing.JButton" binding="okbutton">
+          <component id="a60b3" class="javax.swing.JButton" binding="okButton">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -24,7 +24,7 @@
               <text value="OK"/>
             </properties>
           </component>
-          <component id="eae04" class="javax.swing.JButton" binding="cancelbutton">
+          <component id="eae04" class="javax.swing.JButton" binding="cancelButton">
             <constraints>
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -32,7 +32,7 @@
               <text value="Cancel"/>
             </properties>
           </component>
-          <component id="d3c68" class="javax.swing.JButton" binding="helpbutton">
+          <component id="d3c68" class="javax.swing.JButton" binding="helpButton">
             <constraints>
               <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -65,7 +65,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="6d842" class="javax.swing.JTextField" binding="schemanametxt">
+              <component id="6d842" class="javax.swing.JTextField" binding="schemaNameTextField">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
