--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/ServicePropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/ServicePropertiesDialog.form
@@ -80,7 +80,7 @@
                   </component>
                 </children>
               </grid>
-              <grid id="78091" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="78091" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -102,6 +102,14 @@
                     </constraints>
                     <properties>
                       <text value="&amp;Disable"/>
+                    </properties>
+                  </component>
+                  <component id="f8dc7" class="javax.swing.JCheckBox" binding="tracingCheckBox" default-binding="true">
+                    <constraints>
+                      <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Policy Debug &amp;Tracing"/>
                     </properties>
                   </component>
                 </children>
