--- a/modules/gateway/console/src/main/java/com/l7tech/console/poleditor/SearchForm.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/poleditor/SearchForm.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.l7tech.console.poleditor.SearchForm">
-  <grid id="27dc6" binding="searchPanel" layout-manager="GridLayoutManager" row-count="1" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="searchPanel" layout-manager="GridLayoutManager" row-count="1" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="901" height="29"/>
@@ -34,7 +34,7 @@
       </component>
       <component id="c8810" class="javax.swing.JLabel" binding="xLabel" custom-create="true">
         <constraints>
-          <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font name="DialogInput" size="12" style="1"/>
@@ -44,12 +44,12 @@
       </component>
       <hspacer id="9c337">
         <constraints>
-          <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="1" hsize-policy="0" anchor="0" fill="1" indent="1" use-parent-layout="false"/>
+          <grid row="0" column="7" row-span="1" col-span="1" vsize-policy="1" hsize-policy="0" anchor="0" fill="1" indent="1" use-parent-layout="false"/>
         </constraints>
       </hspacer>
       <hspacer id="3e886">
         <constraints>
-          <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
       <component id="302e8" class="javax.swing.JComboBox" binding="searchComboBox" custom-create="true">
@@ -66,6 +66,14 @@
         </constraints>
         <properties>
           <text value="Case sensitive"/>
+        </properties>
+      </component>
+      <component id="3154" class="javax.swing.JCheckBox" binding="includePropertiesCheckBox" default-binding="true">
+        <constraints>
+          <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Include Properties"/>
         </properties>
       </component>
     </children>
